remove right align since ui library will fix it

--- a/src/_scss/pages/modals/aboutTheData/_aboutTheData.scss
+++ b/src/_scss/pages/modals/aboutTheData/_aboutTheData.scss
@@ -132,15 +132,6 @@
     }
     // reporting differences modal
     &.reporting-differences-modal {
-    .usa-dt-modal__section {
-      .usda-table {
-        thead.usda-table__head {
-          th.table-header:not(:first-child) {
-              text-align: right;
-          }
-        }
-      }
-  }
       @include media($tablet-screen) {
         max-width: rem(900);
 
